// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows a boom function to be passed in 1`] = `
Object {
  "headers": Object {},
  "payload": Object {
    "error": "Not Found",
    "message": "Not Found",
    "statusCode": 404,
  },
  "statusCode": 404,
}
`;

exports[`rejects the call if no error message is provided 1`] = `"You must specify an error message."`;

exports[`throws a Boom 400 error when the condition is true 1`] = `
Object {
  "headers": Object {},
  "payload": Object {
    "error": "Bad Request",
    "message": "Bad Request",
    "statusCode": 400,
  },
  "statusCode": 400,
}
`;

exports[`throws a Boom error with a custom status code when specified 1`] = `
Object {
  "headers": Object {},
  "payload": Object {
    "error": "I'm a teapot",
    "message": "I'm a teapot",
    "statusCode": 418,
  },
  "statusCode": 418,
}
`;
